--- a/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
@@ -238,7 +238,7 @@ flnrev.2.d:0 "With the German king ousted and the nation liberated, the once uni
 flnrev.2.a:0 "The First National Congress ends in failure."
 
 flnrev.3.t:0 "The Council Seizes Control"
-flnrev.3.d:0 "To preserve their power and keep the national situation under control, the Flemish Council has ,with the assistance of the Vlaamse Wacht, seized control of the Assembly stationing forces at all entrances and throughout the surrounding city blocks. Van Severen has used this opportunity to stand before the Assembly and give his speech, trying to convince them of the necessity of stability and preservation of the old system. While he has mild success in convincing some members, most of them are waiting for the Liberation army to launch a counter-attack against the Vlaamse Wacht and liberate the Assembly."
+flnrev.3.d:0 "To preserve their power and keep the national situation under control, the Flemish Council has, with the assistance of the Vlaamse Wacht, seized control of the Assembly stationing forces at all entrances and throughout the surrounding city blocks. Van Severen has used this opportunity to stand before the Assembly and give his speech, trying to convince them of the necessity of stability and preservation of the old system. While he has mild success in convincing some members, most of them are waiting for the Liberation army to launch a counter-attack against the Vlaamse Wacht and liberate the Assembly."
 flnrev.3.a:0 "The situation is escalating."
 
 flnrev.4.t:0 "Divisions Within the Liberation Army"
@@ -377,7 +377,7 @@ flnrev.75.a:0 "The Netherlands are united once more!"
 ### Focuses ###
 
 FLN_Kickstart_Flemish_Army:0 "Kickstart the Flemish Army"
-FLN_Kickstart_Flemish_Army_desc:0 ""
+FLN_Kickstart_Flemish_Army_desc:0 "A ragtag resistance no more, the Flemish Liberation Army must be fully integrated into the aparatus of state."
 
 FLN_establish_the_air_force:0 "Establish the Air Force"
 FLN_establish_the_air_force_desc:0 ""
@@ -431,22 +431,22 @@ FLN_carriers:0 "Carrier Effort"
 FLN_carriers_desc:0 ""
 
 FLN_Syndicalist_Revolution:0 "Syndicalist Revolution"
-FLN_Syndicalist_Revolution_desc:0 ""
-FLN_Collectivize_Farmlands:0 "Collectivise farmlands"
-FLN_Collectivize_Farmlands_desc:0 ""
+FLN_Syndicalist_Revolution_desc:0 "While the purifying fires of revolution consumed much of the former Entente, Flanders chafed under German imperialist oppression. History, however, ultimately moves in one inevitable direction; the land and its people at last have thrown off their chains. Let us herald in the revolution and begin the process of complete socio-economic transformation."
+FLN_Collectivize_Farmlands:0 "Collectivise Farmlands"
+FLN_Collectivize_Farmlands_desc:0 "In spite of the undeniable promise of socialism for the working man, the rural pesantry owe their loyalty primarily to that great redoubt of reaction - the Church and its agents. If the countryside is to progress with the rest of the nation, farms big and small must be seized and reorganised into collectives externally managed by urban industrial syndicates."
 FLN_Take_Control_Industry:0 "Nationalise Industry"
-FLN_Take_Control_Industry_desc:0 ""
+FLN_Take_Control_Industry_desc:0 "While many factories and mills have naturally transitioned to worker self-management, these glorious syndicates have failed to penetrate many key industries. The stain of capitalism cannot continue to sully our nation! All industry not yet sufficiently collective must be run by the state for the time being."
 FLN_Hold_Party_Congress:0 "Hold the Party Congress"
-FLN_Hold_Party_Congress_desc:0 ""
+FLN_Hold_Party_Congress_desc:0 "The issues of greatest societal import have been at least partially dealt with, and given this bit of renewed stability, we must hold the first central party congress since the founding of our new Republic."
 FLN_Distribute_Royal_Wealth:0 "Redistribute Royal Wealth"
-FLN_Distribute_Royal_Wealth_desc:0 ""
+FLN_Distribute_Royal_Wealth_desc:0 "The tyrants who once ruled our lands by right of birth alone accumulated unparalled wealth over the centuries. Let us repatriate this great horde to those whose toil brought such wealth into being!"
 FLN_Reduce_Christian_Influence:0 "Reduce Christian Influence"
-FLN_Reduce_Christian_Influence_desc:0 ""
+FLN_Reduce_Christian_Influence_desc:0 "While the rural powerbase of political Catholicism has is under control, the influence of the Church and religion can still be fealt throughout the country. The people must be freed from their own unfounded belief! We must promote irreligion at every opportunity, though the current situation would make complete state atheism politically infeasible."
 FLN_Join_Phalanstere_Program:0 "Join the Phalanstere Program"
-FLN_Join_Phalanstere_Program_desc:0 ""
+FLN_Join_Phalanstere_Program_desc:0 "The Commune of France has organised a revolutionary new socialist joint research organisation for the betterment of all. We should join the organisation and truly work together for humanity's future."
 
 FLN_Netherlands_United:0 "United Netherlands"
-FLN_Netherlands_United_desc:0 ""
+FLN_Netherlands_United_desc:0 "Our nation has drawn ever closer to our linguistic brothers to the north. The process of political and economic integration, however, is sure to be slow, so let's get to it."
 FLN_Transitional_Government:0 "Transitional Government"
 FLN_Transitional_Government_desc:0 ""
 FLN_Attachement_To_The_Netherlans:0 "The Dutch Attachment"
@@ -494,7 +494,7 @@ FLN_Regency_By_The_Flemish_Council_desc:0 "The Flemish Council has established i
 FLN_Direct_Rule_From_Council:0 "Absolute Rule of the Council"
 FLN_Direct_Rule_From_Council_desc:0 "The King only held us back! Without his oversight Van Severen and the VNV can reign freely and with an iron fist, eliminating all opposition and safeguarding our nation from the syndicalist threat."
 FLN_Unify_The_State:0 "Unify the State"
-FLN_Unify_The_State_desc:0 "While the abolition of the regency has increased the power of the Council substantially, its popularity is at an all time low. Large scale propaganda actions and nationalist rethoric will sway our citizens to see that the enemy isn't on the inside but outside of Flanders."
+FLN_Unify_The_State_desc:0 "While the abolition of the regency has increased the power of the Council substantially, its popularity is at an all time low. Large scale propaganda actions and nationalist rhetoric will sway our citizens to see that the enemy isn't on the inside but outside of Flanders."
 FLN_Crack_Down_On_Syndicalism:0 "Crack Down on Syndicalism"
 FLN_Crack_Down_On_Syndicalism_desc:0 "The Syndicalist movement cannot be allowed to exist in our country as it undermines our authority and falsely strays our sheep onto the wrong path. Strong and decisive action against its leadership may put the organisation out of its misery."
 #FLN_Enforce_Flemish:0 "Enforce Flemish" already defined above as an idea
@@ -596,5 +596,4 @@ FLN_Secure_Diamond_Trade:0 "Secure the Diamond Trade"
 FLN_Secure_Diamond_Trade_desc:0 "Nearly every diamond on the planet passes through Antwerp where the mostly Jewish population controls the diamond sector. By securing more mining permits from the Mittelafrikan government we can increase the production in Africa and as such the trade at home."
 FLN_Copper_Katanga:0 "Copper from Katanga"
 FLN_Copper_Katanga_desc:0 "Katanga contains large untouched copper reserves which are being exploited by Flemish companies but resources like cobalt and other rare earth elements are just waiting to be exploited by our mining companies." #?
-
 
