--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -2090,10 +2090,10 @@ gerfor.152.t:0 "예멘의 거부"
 gerfor.152.d:0 "안타깝게도 예멘은 동맹 제안을 거부하기로 결정했습니다."
 gerfor.152.a:0 "좋아."
 
-gerfor.153.t:0 "루마니아를 제국 조약에 초대 하시겠습니까?"
-gerfor.153.d:0 "우리 관계의 개선으로 루마니아를 제국 조약에 초대할 기회를 얻었습니다. 플로이에슈티 유전과 발칸 지역의 전략적 위치에 대한 통제로 인해 이들은 유용한 '파트너'임을 입증 할 수 있습니다. 문제는 초대 여부를 결정하는 것입니다."
-gerfor.153.a:0 "환영한다."
-gerfor.153.b:0 "왜 우리가 이 멍청이들을 원해야 하지?"
+gerfor.153.t:0 "An invitation to the Reichspakt"
+gerfor.153.d:0 "Due to a warming in German-Romanian relations, we have received an invitation from the German Empire to join their military alliance, the Reichspakt. Due to our control of the Ploiesti oil fields and strategic position in the Balkans, the Germans believe we could prove useful 'partners'. We would of course also benefit from being safely underneath the formidable German military umbrella. The question is whether or not an alliance is in our best interests at this time."
+gerfor.153.a:0 "Let's join the club."
+gerfor.153.b:0 "It's not in our best interests."
 
 gerfor.154.t:0 "루마니아의 제국 조약 가입"
 gerfor.154.d:0 "루마니아는 제국 조약 가입 제안을 수락했습니다."
