--- a/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
@@ -994,6 +994,8 @@ INC_international_outpost_decision_desc:0 "As the vanguard of world revolution i
 #Send Volunteers to Bharatiya Commune
 #The Bharatiya Commune is in its sacred war against Indian reactionaries. We should send volunteers to help them.
 
+INC_expropriate_traitors_land_decision:0 "Expropriate Traitorous Lands"
+INC_expropriate_traitors_land_decision_desc:0 ""
 INC_declare_dai_viet_decision:0 "다이 비엣 공화국 선언"
 INC_declare_dai_viet_decision_desc:0 "Indochina is a fake nation, we must assert the real identity of Viet!"
 ### Focuses ###
