--- a/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
@@ -23,13 +23,13 @@ SAU_national_populist_party:0 "Hizb Alearabiu"
 SAU_national_populist_party_long:0 "Hizb Alearabiu"
 
 ### Opinion Modifiers ###
-ott_jabalshammar:0 "Treason"
-sau_rebuild:0 "Respected our sovereignty"
+ott_jabalshammar:0 "반역"
+sau_rebuild:0 "우리의 주권을 존중함"
 
 ### Tooltips ###
 SAU_JBSKILL:0 "This Focus will be bypassed when we defeat §YJabal Shammar§!"
-SAU_saudi_victory:0 "Jabal Shammar has been defeated"
-IKH_revolt:0 "The Ikhwan has been crushed"
+SAU_saudi_victory:0 "자발 샴마르가 패배했습니다"
+IKH_revolt:0 "이크완이 진압되었습니다"
 SAU_develop_suryah_tt:0 "This adds §Y2 Civilian Factories§! when we control the §YLevant§!"
 SAU_develop_fringe_arabia_tt:0 "This adds §Y2 Civilian Factories§! when we control §YYemen§!"
 SAU_develop_iraq_i_arab_tt:0 "This adds §Y2 Civilian Factories§! when we control §YIraq§!"
@@ -57,11 +57,11 @@ SAU_backwards_economy:0 "Archaic Economy"
 SAU_backwards_economy_desc:0 "Our economy is still based on small time agriculture, pastoral activity and Oil trading"
 SAU_religious_fervor_idea:0 "High Morale Troops"
 SAU_religious_fervor_idea_desc:0 "Well equipped and motivated men, our forces fight for more than their mere nation, but for the Holy Cities, for Faith and their Sovereign"
-SAU_new_arabian_army:0 "New Arabian Army"
+SAU_new_arabian_army:0 "새로운 아라비아 군대"
 SAU_new_arabian_army_desc:0 "Our reformed armed forces now act with renewed vigour and independence from politics, and god willing will bring us victory in the battlefield"
-SAU_arabian_horsemanship_idea:0 "Arabian Horsemanship"
+SAU_arabian_horsemanship_idea:0 "아라비아의 기마술"
 SAU_arabian_horsemanship_idea_desc:0 "Our horsemen, equipped with the finest steeds and steeled by years of raids, have answered the call and will fight for us in the coming war for the world"
-SAU_desert_logstics_idea:0 "Desert Logistics"
+SAU_desert_logstics_idea:0 "사막에서의 보급"
 SAU_desert_logstics_idea_desc:0 "Our forces are trained to make the best our our terrain and know paths foreigners do not"
 SAU_uniting_the_peninsula:0 "Unifiers of Arabia"
 SAU_uniting_the_peninsula_desc:0 "The Rashidi dogs are dead and the road to a unified Arabia lies wide open. Sally forth and claim Victory!"
@@ -70,71 +70,71 @@ SAU_muslim_universities:0 "Muslim Universities"
 
 ### Focuses ###
 
-SAU_the_nemisis:0 "Two Emirs Enter..."
-SAU_the_nemisis_desc:0 "For a century war has raged between our houses, but one fact is clear: The Arabian peninsula is too small for the both of the house of Rashid and Saud"
-SAU_rashidis_get_out:0 "Drive off the Rashidis"
-SAU_rashidis_get_out_desc:0 "After a century of struggle, we have at least crushed the last meaningful Rashid stronghold, and we can finally reach our rightful place as masters of this land"
-SAU_fulfull_destiny:0 "Fulfill our destiny"
-SAU_fulfull_destiny_desc:0 "Our conquest shouldn't end here! All Arabs must unite under Arabia!"
-SAU_asir:0 "Claims on Asir"
-SAU_hit_oman:0 "Eyes on Oman"
-SAU_hit_egypt:0 "Hit Egypt"
-SAU_hit_libya:0 "Hit Libya"
+SAU_the_nemisis:0 "두 에미르 시대"
+SAU_the_nemisis_desc:0 "아라비아의 두 유력 가문은 자그마치 한 세기 동안이나 전쟁을 치뤄왔지만, 한 가지 분명한 사실은 아라비아 반도는 라시드와 사우드 양가 모두에게 너무 작다는 것입니다."
+SAU_rashidis_get_out:0 "라시드 축출"
+SAU_rashidis_get_out_desc:0 "한 세기 동안 고군분투한 끝에, 우리는 마지막 남은 라시드의 유의미한 요새를 무너뜨렸고, 마침내 이 땅의 유일하고 정당한 주인으로서 군림할 수 있었습니다."
+SAU_fulfull_destiny:0 "우리의 운명을 이행하라"
+SAU_fulfull_destiny_desc:0 "우리의 정복은 여기서 끝나서는 안 됩니다! 모든 아랍인들은 아라비아의 이름 아래 단결해야 합니다!"
+SAU_asir:0 "아시르를 주장하다"
+SAU_hit_oman:0 "오만을 주시하다"
+SAU_hit_egypt:0 "이집트 타격"
+SAU_hit_libya:0 "리비아 타격"
 SAU_asir_desc:0 "Without the a larger power to back their pitiful landgrab, we can finally hit Yemen with full force. Southern Arabia will be ours!"
 SAU_hit_oman_desc:0 "Its time to finish what we started a decade ago. Now we have the resources to properly dethrone the foolish sultan of Muscat"
 SAU_hit_egypt_desc:0 "For too long the nearly apostate ways of the wanna be pharaohs have misled the faithful. Now, we must unite all Arabs under our rightful rule!"
 SAU_hit_libya_desc:0 "Now we reach west, towards lands we yet don't rule; we will see the Atlantic like the old Caliphs and liberate every Arab under the rule of western puppets"
 
 
-SAU_saudi_hegemony:0 "Saudi Hegemony"
+SAU_saudi_hegemony:0 "사우디의 패권"
 SAU_saudi_hegemony_desc:0 "Our allies have served their purpose. With the Rashids's and their allies gone, no tribe has the means to stand in our way. A new era begins for Arabia, and the Saudis call all the shots now"
-SAU_expand_oil_hold:0 "Expand Oil Hold"
+SAU_expand_oil_hold:0 "유전 확장"
 SAU_expand_oil_hold_desc:0 "For a long time we alloed local lords and chiefs to freely do with the Oil in their land as it pleased them; not anymore! Every man must be his duty to strengthen our position..."
-SAU_consolidating_suryah:0 "Consolidating Suriye"
+SAU_consolidating_suryah:0 "수리예 통합"
 SAU_consolidating_suryah_desc:0 "The Western Mashriq is a vast land that has the potential to far outshine Arabia economically and politically, and now that we are in its possession, we must ensure that our government is actually felt and respected by the locals."
-SAU_develop_suryah:0 "Develop Suriye"
+SAU_develop_suryah:0 "수리예 개발"
 SAU_develop_suryah_desc:0 "The land we now own are greatly urbanised areas with an immense potential workforce, and our new spoils put the family in a prime position to build factories in the large cities of Syria; we must take haste and seize this opportunity"
 SAU_consolidating_fringe_arabia:0 "Consolidating Fringe Arabia"
 SAU_consolidating_fringe_arabia_desc:0 "As the flames of war lessen, we can finally set roots on the rich region of Yemen. Once allied Arabia Felix by the Rum due to the immense wealth of its rulers, these lands have long been held by Ottoman forcesm but also divided by petty sectarian squabbles which must be dealt with"
-SAU_develop_fringe_arabia:0 "Develop Yemen"
+SAU_develop_fringe_arabia:0 "예멘 개발"
 SAU_develop_fringe_arabia_desc:0 "The cities of Sanaa and Aden are among the largest in our realm, and their merchant classes will eagerly accept our help to develop and improve their lands, and ensure that they finally reach this new age of wonders we live in"
-SAU_consolidating_iraq_i_arab:0 "Consolidating Iraq-I-Arab"
+SAU_consolidating_iraq_i_arab:0 "이라크-아이-아랍 통합"
 SAU_consolidating_iraq_i_arab_desc:0 "As our rule reaches these ancient lands, we reach the jewel of the Mashriq, Baghdad, but also many other towns who are unaware of sometimes who we even are! If Arabia is to stand as one, the grand machinery of the state must reach Iraq-i-Arab"
 SAU_develop_iraq_i_arab:0 "Invest in Iraq-i-Arab"
 SAU_develop_iraq_i_arab_desc:0 "As our hold on the Eastern Mashriq improves, the opportunity to make use of its workforce to improve our production capacity must not go to waste. Baghdad will soon be the beating heart of this new Arabia"
 SAU_tighten_control_arabia:0 "Tighten Control over Ha'il"
 SAU_tighten_control_arabia_desc:0 "There have been many years since we held Ha'il or the surrounding areas, and many of our old allies have forgotten their allegiances. Paying visits and showing respect to these lords, and convincing them our just intentions, will, God willing, take not much time"
-SAU_purge_rashidi:0 "Purge the Rashidis"
+SAU_purge_rashidi:0 "라시드 정화"
 SAU_purge_rashidi_desc:0 "The last of the Rashid's are on hiding, both on lands we control and abroad. The only way to truly consolidate our rule and to end delusions of grandeur from lesser houses for good is to end their line, in a definitive fashion"
-SAU_purge_ikhwan:0 "Purge the Ikhwan"
+SAU_purge_ikhwan:0 "이카완 정화"
 SAU_purge_ikhwan_desc:0 "The Ikhwan have fulfilled their mission of liberating Arabia from the yoke of undeserving lords, and yet dared to revolt against the hand that fed them. Like a stern father, we must punish those who don't recognise the new pecking order in Arabia, where the Saudis stand absolute"
-SAU_dealing_with_kuwait:0 "Dealing with Kuwait"
+SAU_dealing_with_kuwait:0 "쿠웨이트와 거래"
 SAU_dealing_with_kuwait_desc:0 "The House of Sabah have been long desiring of their own autonomy in their affairs; if they wish so, they must hand over to us their assets all over the Arabian Gulf, for all of these buildings of strategic interest of the state"
-SAU_consolidating_realm:0 "Consolidating the Realm"
+SAU_consolidating_realm:0 "소왕국 통합"
 SAU_consolidating_coaliiton_desc:0 "Our tribal allies will all gather again, and will be convinced by our wise arguments that our Emir is the sole supreme lord of Arabia. Of course, things are a little more complicated than that, and a concentrated effort must be made to reach that end"
-SAU_saudi_legal_code:0 "Saudi Legal Code"
+SAU_saudi_legal_code:0 "사우디 법전"
 SAU_saudi_legal_code_desc:0 "While we still will preserve local law and legislation, we need to draft a proper legal code to be established in the entirety of our Kingdom's territory"
-SAU_minority:0 "Protect the Minorities"
+SAU_minority:0 "소수자들을 보호"
 SAU_minority_desc:0 "For centuries, despite our differences, we have respected the rights of the Christians, Jews and other peoples under our rule, as it was instructed by the Prophet himself. We must ensure that all of our subjects, no matter their creed, are safeguarded"
-SAU_absolute_rulership:0 "Absolute Leadership"
+SAU_absolute_rulership:0 "전제정치"
 SAU_absolute_rulership_desc:0 "There is no time for deliberation and liberalism; there is only time for action. A leader must not waste his time listening to those lesser than him, but rather focus on his own opinions and his most trusted advisers"
-SAU_realm_of_the_arabs:0 "Realm of the Arabs"
+SAU_realm_of_the_arabs:0 "아랍의 소왕국들"
 SAU_realm_of_the_arabs_desc:0 "All of Arabia is under us, and nothing can stand between us and the destiny of our people, to be united as one, under one single monarch: a Saud"
 SAU_houses_of_wisdom:0 "Houses of Wisdom"
 SAU_houses_of_wisdom_desc:0 "Houses of Wisdom"
 
-SAU_land_of_faith:0 "Land of Faith"
-SAU_cleanse_suryah:0 "Cleanse Suriye"
+SAU_land_of_faith:0 "신앙의 땅"
+SAU_cleanse_suryah:0 "수리예 청소"
 SAU_cleanse_fringe_arabia:0 "Cleanse Fringe Arabia"
-SAU_cleanse_iraq_i_arab:0 "Cleanse Iraq-I-Arab"
-SAU_cleansing_of_heresy:0 "Cleansing of Heresy"
-SAU_law_of_faith:0 "Law of Faith"
-SAU_Jizya:0 "Jizya"
+SAU_cleanse_iraq_i_arab:0 "이라크-아이-아랍 청소"
+SAU_cleansing_of_heresy:0 "이단 정화"
+SAU_law_of_faith:0 "신앙의 법"
+SAU_Jizya:0 "지즈야"
 SAU_gather_the_amirs:0 "Gather the Amirs"
 SAU_trading_regulations:0 "Trading Regulations"
 SAU_funds_for_faith:0 "Funds for the Faith"
-SAU_ghazis:0 "Ghazis"
-SAU_extreme_jihad:0 "Warriors of the Faith"
+SAU_ghazis:0 "가지스"
+SAU_extreme_jihad:0 "신앙의 전사들"
 SAU_hunt_apostates:0 "Hunt Apostates"
 SAU_destroy_dissent:0 "Destroy Dissent"
 SAU_madrasah_funding:0 "Madrasah Funding"
@@ -198,13 +198,13 @@ SAU_industrialization_effort:0 "Industrialisation Effort"
 SAU_industrialization_effort_desc:0 "We have built some factories, but we can scarcely be called and industrialised state. Our people still mostly live a way from the cities themselves after all. To change that, we must simply ensure that enough jobs are found at the cities, and continue to expand our ever growing industry"
 SAU_arms_industry:0 "Arms Industry"
 SAU_arms_industry_desc:0 "Our industry now should focus on the defence of the realm, as we work to divert funds and resources towards defence expenses. We must now allow our armed forces to lack the vital equipment they so desperately need!"
-SAU_new_railroads:0 "New Railroads"
+SAU_new_railroads:0 "새로운 철도"
 SAU_new_railroads_desc:0 "As we connect the many cities that dot our homeland, across sand and plans and sea, we see a path to a brand new future. Folks who had never seen a carriage now will see trains going through their lands into the sunset of Arabia's bright new future"
-SAU_arabian_airports:0 "Airports for Arabia"
+SAU_arabian_airports:0 "아라비아의 공항"
 SAU_arabian_airports_desc:0 "Connecting our cities not only by land, but by air, should be a priority for our new government. The added bonus of allowing greater military traffic certainly is a bonus..."
-SAU_building_better_future:0 "Building a Better Future"
+SAU_building_better_future:0 "더 나은 미래를 건설하자"
 SAU_building_better_future_desc:0 "A better future is more than new buildings, or new books, or new goods; its changing the way we see the world, and thus changing the world. God's light again shines over us, and we will make this earth a better place, even if the cost is high"
-SAU_techslot_machine:0 "Build Universities"
+SAU_techslot_machine:0 "대학 건립"
 SAU_techslot_machine_desc:0 "The final step our plans for education is naturally the higher learning, and revitalising the science and advancement than once were synonym with the Arabic language. Naturally, more hawkish advisers see more 'practical' gains from such universities..."
 
 ### Military Focuses ###
@@ -220,7 +220,7 @@ SAU_naval_exercises:0 "Naval Exercises"
 SAU_naval_exercises_desc:0 "As we prepare for confrontation with Persia and other hostile powers in the Arabian Gulf, we will conduct navy exercises to ensure our fleet has actual experience at sea when conflict flares up"
 SAU_liberation_war_of_holy_cities:0 "Liberate the Holy Cities"
 SAU_liberation_war_of_holy_cities_desc:0 ""
-SAU_mobilize_the_tribes:0 "Mobilise the Tribes"
+SAU_mobilize_the_tribes:0 "부족들을 징집하라"
 SAU_mobilize_the_tribes_desc:0 "Every tribe in these lands has sworn to help us, and now we are at war with foes which wish to undo all we have fought for so long. Fulfil your oaths! Come to us, for your Emir calls for aid!"
 SAU_army_command_modernization:0 "Army Command Modernisation"
 SAU_army_command_modernization_desc:0 "It's high time we modernise the way our army is led, away from the lords and into the Army, which will be properly organised following foreign military doctrine, with different branches for different types of units and theatres"
@@ -228,31 +228,31 @@ SAU_establish_arabian_airforce:0 "Establish Arabian Aiforce"
 SAU_establish_arabian_airforce_desc:0 ""
 SAU_establish_arabian_mechanized_brigades:0 "Establish Mechanised Brigades"
 SAU_establish_arabian_mechanized_brigades_desc:0 "In this new age, we must ensure our capacity to adapt is as present as our bravery and integrity. Mechanised and Motorised infantry forces will play a grand part in our reconquest of the homeland!"
-SAU_establish_new_arabian_army:0 "The New Arabian Army"
+SAU_establish_new_arabian_army:0 "새로운 아라비아 군대"
 SAU_establish_new_arabian_army_desc:0 "As our army reform continues, more political effort must be done to ensure it works at a similar capacity to that of Major Powers, lest we will be sent back to the dustbin of history. The time has come for us to spare no effort in making sure to end tribalism and factionalism in our armed forces and prepare it for the coming century"
-SAU_arabian_horsemanship:0 "Arabian Horsemanship"
+SAU_arabian_horsemanship:0 "아라비아의 기마술"
 SAU_arabian_horsemanship_desc:0 "Ever since before the time of the Caliphate, we Arabians were well known as excellent horsemen, and trusty warriors are one thing that we'll surely need. As our cavalry divisions modernise, they are expected to operate in a distinct Arabian fashion, still"
-SAU_desert_warfare:0 "Desert Warfare"
+SAU_desert_warfare:0 "사막에서의 전투"
 SAU_desert_warfare_desc:0 "We know how to fight in these lands, better than anyone else. Our men have fought off our rivals for decades now, and many more foes are to come to our sands. But they will be defeated, and learn to hate sand"
-SAU_desert_logstics:0 "Desert Logistics"
+SAU_desert_logstics:0 "사막에서의 보급"
 SAU_desert_logstics_desc:0 "Moving armies through the desert is oftentimes impossible if you do not know the way; a wrong turn may have your forces trapped in trackless desert, or straight into an enemy trap!"
-SAU_war_of_resistance:0 "War of Resistance"
+SAU_war_of_resistance:0 "저항 전쟁"
 SAU_war_of_resistance_desc:0 "We live in an age of total war, where even limited conflicts put everything at stake. Your young nation can fall just as fast as it arose, and be crushed under the iron heels of history. We must resist! Forever Arabia will be Free!"
 
 
 
-saud.1.t:0 "The Emirate of Nejd"
+saud.1.t:0 "네지드 에미르국"
 saud.1.d:0 "The Weltkrieg was one of many signs that we, the House of Saud, are destined the rule this land. In the hour of his greatest hubris, the Hashemites were abandoned by their infidel puppet masters and left for dead to the Turks and their puppet masters. While our inactivity in the war proved most fortuitous when it came time to avoid Ottoman retaliation, the decadent Turks hold no real sway over us; the conquest of Qatar and the Trucial Coast were made all on our own. Now we bide our time, gathering warriors, money, and expertise to strike at the Rashidis, who think they can play both sides by accepting Hashemite warriors and pay lip service to the Porte, and finally unite Arabia under our flag!"
-saud.1.a:0 "Long live the House of Saud"
+saud.1.a:0 "사우드 왕가 만세!"
 
 
 
-saud.3.t:0 "Saudi Arabia"
+saud.3.t:0 "사우디 아라비아"
 saud.3.d:0 "Today with our victory over the house of Rashidis, the Saudis stand dominant. With this victory we shall rule over all Arabs!"
-saud.3.a:0 "Long live the House of Saud"
+saud.3.a:0 "사우드 왕가 만세!"
 saud.2.t:0 "The Sultan claims sovereignty over the Caliphate and the Holy Cities!"
 saud.2.d:0 "In a solemn and sacred ceremony the Saudi Sultan of Arabia has declared that he is the new Caliph of Islam. A new an pious dynasty will lead and guide the faithful once more."
-saud.2.a:0 "Long live the Caliph!"
+saud.2.a:0 "칼리프 만세!"
 
 
 
