--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -50,7 +50,7 @@ occupaied_guam_USA:0 "일본이 괌을 점령하다"
 no_occupaied_guam_USA:0 "일본이 괌을 점령하지 않았다"
 
 ### Tooltips ###
-ACW_liberia_rally:0 "리비아를 지키기 위해 국민을 소집할 것이다"
+ACW_liberia_rally:0 "라이베리아를 지키기 위해 국민을 소집할 것이다"
 ACW_panama_garrison_tooltip:0 "파나마 주둔군이 미국으로 돌아오다"
 ACW_chinese_marines_tooltip:0 "중국의 해병들이 미국으로 돌아오다"
 PSA_rockies_ceasefire:0 "로키 산맥에서 휴전협정이 체결되다"
