--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -931,33 +931,33 @@ BUL_a_liberal_bulgaria:0 "자유주의 불가리아"
 BUL_a_liberal_bulgaria_desc:0 "We have managed to bring about all of the reforms that we had sought out to push through. Bulgaria is now a more liberal and fairer nation, with the Tsar serving as the unifier for the Bulgarian people. The future seems optimistic. Long live the Bulgarian people!"
 
 BUL_the_bulgarian_navy:0 "불가리아 해군"
-BUL_the_bulgarian_navy_desc:0 "It is paramount that we turn our gaze towards the expansion and maintainence of our navy, especially considering the rapid changes being made to naval warfare and the great importance being placed on the possessesion of a proper navy."
+BUL_the_bulgarian_navy_desc:0 "특히 해전을 위한 빠른 변화와 적절한 해군의 소유에 대한 중요성을 고려할 때, 우리는 우리 해군의 확장과 유지를 향해 시선을 돌리는 것이 중요합니다."
 BUL_uboat_operations:0 "U-보트 작전"
-BUL_uboat_operations_desc:0 "In order to ensure that we can effectively destroy enemy shipping routes and strike at unprepared enemy ships, we must begin the construction of u-boats."
+BUL_uboat_operations_desc:0 "우리가 효과적으로 적의 항로를 파괴하고 준비가 되지 않은 적의 함대를 공격 할 수 있게 하기 위해 우리는 U-보트의 건조를 시작해야 합니다."
 BUL_build_light_cruisers:0 "경순양함 건조"
-BUL_build_light_cruisers_desc:0 "Equipped with protective armour, light cruisers allow for the protection of our convoys and serve as destroyer command ships. We must look to invest more in these ships."
+BUL_build_light_cruisers_desc:0 "보호 장갑이 장착된 경순양함은 우리의 호송선을 보호할 수 있고 구축함의 역할을 합니다. 우리는 이 함선에 더 많은 투자를 해야 합니다."
 BUL_focus_on_destroyer_construction:0 "구축함 건조 집중"
-BUL_focus_on_destroyer_construction_desc:0 "Destroyers are both durable and manoeuvrable ships that are used to defend the main vessels, convoys, and battle groups. We should look into creating more of them."
-BUL_develop_the_varna_naval_base:0 "바르나 해군 기지 개발"
-BUL_develop_the_varna_naval_base_desc:0 "It is paramount that we place an emphasis on naval warfare and develop the Varna naval base. That way, we can ensure that our nation is better prepared in the face of potential naval warfare while also having the ability to house more ships."
+BUL_focus_on_destroyer_construction_desc:0 "구축함은 주요 선박, 호송선, 함대를 방어하기 위해 사용되는 내구성이 있고 기동성이 있는 함선입니다. 우리는 그것들을 더 많이 만드는 것을 고려해야 합니다."
+BUL_develop_the_varna_naval_base:0 "바르나 해군기지 개발"
+BUL_develop_the_varna_naval_base_desc:0 "우리가 에 중점을 두고 바르나 해군 기지를 개발하는 것이 무엇보다 중요합니다. 그렇게 함으로써 우리는 해군의 잠재적인 전쟁에 대비하여 우리나라가 더 잘 준비 될 수 있게 함과 동시에 더 많은 함선을 수용할 수있는 능력을 갖출 수 있게합니다."
 BUL_further_naval_aircraft_research:0 "추가 해군 항공기 연구"
-BUL_further_naval_aircraft_research_desc:0 "By having the navy and the air force co-operate, we can ensure aerial superiority no matter where we are. We shall rule the land and the seas!"
+BUL_further_naval_aircraft_research_desc:0 "해군과 공군을 협력시킴으로써 우리는 어디에서나 공중의 우월성을 보장할 수 있습니다. 우리는 육지와 바다를 통치해야 합니다!"
 BUL_the_bulgarian_air_force:0 "불가리아 공군"
-BUL_the_bulgarian_air_force_desc:0 "It is paramount that we turn our gaze towards the expansion and maintainence of our air force, especially considering the rapid changes being made to aerial warfare and the great importance being placed on the possessesion of a proper air force."
+BUL_the_bulgarian_air_force_desc:0 "공중전의 급격한 변화와 적당한 공군의 소유에 대한 중요성을 고려할 때 우리의 공군력 확충 및 유지에 시선을 돌리는 것이 무엇보다 중요합니다."
 BUL_destroy_enemy_supply_lines:0 "적 보급선 파괴"
-BUL_destroy_enemy_supply_lines_desc:0 "Bomber planes are crucial to the war effort in that they allow for the destruction of enemy supply lines effectively, yet from a remote area meaning that, at the end of the day, we will cause more damage while losing fewer lives."
+BUL_destroy_enemy_supply_lines_desc:0 "폭격기는 적들의 보급선을 효과적으로 파괴할 수 있다는 점에서 전쟁 노력에 매우 중요한 역할을 하며, 우리는 더 적은 생명을 잃는 반면 더 많은 피해를 입힐 것입니다."
 BUL_close_air_support:0 "근접 항공 지원"
-BUL_close_air_support_desc:0 "The protection of our men from all angles, especially the sky, is paramount to the war effort. We must begin to research close air support technology."
+BUL_close_air_support_desc:0 "모든 각도, 특히 하늘로부터 우리 군인들을 보호하는 것이 전쟁 노력에 있어 가장 중요합니다. 우리는 근접 항공 지원 기술에 대한 연구를 시작해야 합니다."
 BUL_invest_in_fighters:0 "전투기 투자"
-BUL_invest_in_fighters_desc:0 "In order to ensure aerial superiority and the destruction of enemy planes, we must begin to invest in fighter planes."
+BUL_invest_in_fighters_desc:0 "제공권과 적기의 파괴를 보장하기 위해 우리는 전투기에 투자를 시작해야 합니다."
 BUL_spread_our_resources:0 "자원 활용"
-BUL_spread_our_resources_desc:0 "Rather than concentrating our efforts solely on building new airbases or naval bases, we must focus our attention on building up our naval and aerial institutions."
+BUL_spread_our_resources_desc:0 "새로운 공군기지 또는 해군기지 건설에만 전념하기보다는 우리는 우리의 해군과 안테나 시설을 건설하는데 집중해야 합니다."
 BUL_build_new_airbases:0 "새 공군기지 건설"
-BUL_build_new_airbases_desc:0 "It is paramount that we place an emphasis on aerial warfare and build new airbases. That way, we can ensure that our nation is better connected while also having the ability to house more planes."
+BUL_build_new_airbases_desc:0 "공중전에 중점을 두고 새로운 기지를 건설하는 것이 가장 중요합니다. 그렇게 함으로써 우리는 더 많은 비행기를 수용하는 능력을 갖추는 동시에 우리나라가 더 잘 연결되도록 할 수 있습니다."
 BUL_naval_doctrines:0 "해군 교리"
-BUL_naval_doctrines_desc:0 "Allowing our admirals to co-ordinate and map our the route our navy will take alongside training our naval officers to adapt to these new techniques will be crucial in modernising and strengthening our navy."
+BUL_naval_doctrines_desc:0 "우리의 해군들이 이러한 새로운 기술에 적응하기 위해 우리의 해군 장병들과 함께 우리의 해군 장병들을 훈련시키고 조정하게 하는 것은 우리 해군의 현대화와 강화에 결정적일 것입니다."
 BUL_aerial_doctrines:0 "공군 교리"
-BUL_aerial_doctrines_desc:0 "We should teach our pilots new methods on how to fly planes. That way, we can outsmart the enemy and greatly increase our understanding of aerial warfare."
+BUL_aerial_doctrines_desc:0 "우리는 조종사들에게 비행기 조종법에 대한 새로운 방법을 가르쳐야 합니다. 그렇게 함으로써 우리는 적을 능가할 수 있으며 공중전에 대한 이해도를 크게 높일 수 있습니다."
 
 ### Decisions ###
 BUL_foreign_policy_decisions:0 "대외 정책 결정"
