--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -888,47 +888,47 @@ BUL_bulgaria_under_syndicalism:0 "생디칼리즘 아래의 불가리아"
 BUL_bulgaria_under_syndicalism_desc:0 "Thankfully, it seems as though we have managed to consolidate power effectively and have instituted all of the policies we had sought to. We can safely say that Bulgaria is a syndicalist state, and can turn our gaze towards planning for a brighter, more optimistic future. Long live Bulgaria!"
 
 BUL_the_broad_socialists:0 "넓은 사회주의자"
-BUL_the_broad_socialists_desc:0 "Following the chaos which had engulfed Bulgaria, the Broad Socialists have managed to arise from the ashes as the new leaders of the Bulgarian state. Composed of bourgeoise-friendly socialists and constitutional monarchists, the Broad Socialists wish to see drastic change within Bulgaria."
+BUL_the_broad_socialists_desc:0 "불가리아를 휩쓴 혼란 이후, 넓은 사회주의자는 불가리아의 새로운 지도자로서 재에서 가까스로 벗어났습니다. 부르주아 친화적 사회주의자들과 입헌군주자들로 구성된 넓은 사회주의자들은 불가리아 내에서 급격한 변화를 보고 싶어합니다."
 BUL_cooperate_with_the_bourgeoise:0 "부르주아들과의 협력"
-BUL_cooperate_with_the_bourgeoise_desc:0 "Unlike the Narrow Socialists, we are not against the idea of working with the bourgeoise in order to help further the position of the state and the people. Despite many on the left decrying this as a betrayal to socialist ideals, working with the bourgeoise is in fact a necessary measure."
+BUL_cooperate_with_the_bourgeoise_desc:0 "좁은 사회주의자들과 달리, 우리는 국가와 국민의 위치를 더 발전시키기 위해 부르주아들과 함께 일하는 생각에 반대하지 않습니다. 많은 좌파들은 이것을 사회주의적 이상에 대한 배신이라고 비난하지만, 사실 부르주아들과 일하는 것은 필요한 조치입니다."
 BUL_advance_political_democracy:0 "정치 민주주의 선진화"
-BUL_advance_political_democracy_desc:0 "Every part of the Bulgarian state must accept democratic ideals in order to ensure greater reprsentation of the views of the people. This acceptance, however, must begin in the political sphere. We must advance political democracy."
+BUL_advance_political_democracy_desc:0 "불가리아의 모든 지역은 국민들의 견해에 대한 더 큰 보상을 보장하기 위해 민주적인 이상을 받아들여야 합니다. 그러나 이러한 수용은 정치적 영역에서 시작되어야 합니다. 우리는 정치적 민주주의를 발전시켜야만 합니다."
 BUL_equal_opportunity:0 "기회 균등"
-BUL_equal_opportunity_desc:0 "We must ensure that every party and every Bulgarian citizen be given the right to representation and state their viewpoint. After all, without such freedoms in place, we cannot truly call oureslves a democratic state."
+BUL_equal_opportunity_desc:0 "우리는 모든 당과 불가리아 시민들에게 그들의 의견을 표현하고 진술할 권리를 주어야 합니다. 하지만, 그러한 자유가 없다면, 우리는 진정한 민주주의 국가라고 부를 수 없습니다."
 BUL_empower_the_common_worker:0 "일반 작업자 역량 강화"
-BUL_empower_the_common_worker_desc:0 "We cannot allow the position of the common worker to be weakened or even compromised in the slightest. For they are the backbone behind the greatness that is Bulgaria."
+BUL_empower_the_common_worker_desc:0 "우리는 일반 노동자의 위치가 조금이라도 약해지거나 심지어 위태로워지는 것을 용납할 수 없습니다. 그들은 불가리아라는 위대한 이면의 근간이기 때문입니다."
 BUL_bolster_the_free_trade_unions:0 "자유 무역 조합 강화"
-BUL_bolster_the_free_trade_unions_desc:0 "In order to ensure that the workers have a platform to organise and protect their rights and freedom, we must work towards bolstering the Free Trade Unions, one of Bulgaria's oldest and biggest trade unions."
+BUL_bolster_the_free_trade_unions_desc:0 "노동자들이 그들의 권리와 자유를 조직하고 보호할 플랫폼을 갖추도록 하기 위해서, 우리는 불가리아에서 가장 오래되고 가장 큰 노동조합 중 하나인 자유 무역 조합을 지지하는 쪽으로 노력해야 합니다."
 BUL_the_radical_democrats:0 "급진민주당"
-BUL_the_radical_democrats_desc:0 "Following the chaos which had engulfed Bulgaria, the Radical Democrats have managed to arise from the ashes as the new leaders of the Bulgarian state. Composed of democrats and constitutional monarchists, the Radical Democrats wish to see drastic change within Bulgaria."
+BUL_the_radical_democrats_desc:0 "불가리아를 휩쓴 혼란 이후, 급진민주당은 불가리아의 새로운 지도자로서 재에서 가까스로 벗어났습니다. 민주주의자들과 입헌군주자들로 구성된 급진민주당은 불가리아 내에서 급격한 변화를 보고 싶어합니다."
 BUL_ensure_judicial_independence:0 "사법 독립 보장"
-BUL_ensure_judicial_independence_desc:0 "A true democratic society requires a proper justice system. In order to achieve a proper justice system, we must ensure that the judiciary is independent and its judges uncorrupt. The law must be obeyed."
+BUL_ensure_judicial_independence_desc:0 "진정한 민주주의 사회는 적절한 사법 제도를 필요로 합니다. 적절한 사법 제도를 달성하기 위해서는, 우리는 사법부가 독립적이고 사법부의 판사들이 부패하지 않도록 해야 합니다. 법은 반드시 지켜져야 합니다."
 BUL_sovereignty_of_the_people:0 "국민의 주권"
-BUL_sovereignty_of_the_people_desc:0 "The power of the state should be vested in the hands of the people though elected officials. We cannot allow autocrats and dictators to dismantle the state and consolidate power under their rule. The views of the people must be properly represented."
+BUL_sovereignty_of_the_people_desc:0 "국가의 권력은 선출직 공무원을 통해 국민의 손에 귀속되어야 합니다. 우리는 전제 군주와 독재자가 국가를 해체하고 권력을 통합하는 것을 허용할 수 없습니다. 사람들의 견해는 적절하게 표현되어야 합니다."
 BUL_political_decentralisation:0 "정치적 분권화"
-BUL_political_decentralisation_desc:0 "It is key that we begin the decentralisation of the institutions of the state. As it stands, we gain nothing by centralising power in Sofia. We must take to empowering all of our citizens from every corner of Bulgaria."
+BUL_political_decentralisation_desc:0 "우리는 국가 기관의 분권화를 시작하는 것이 중요합니다. 우리는 소피아에서 권력을 중앙 집권화함으로써는 아무 것도 얻지 못합니다. 우리는 불가리아 전역에서 모든 시민들에게 권한을 부여해야 합니다."
 BUL_progressive_income_tax:0 "점진적 소득세"
-BUL_progressive_income_tax_desc:0 "The institution of a progressive income tax is paramount to our efforts in terms of attaining greater revenue from our citizens and also ensuring that every citizen pays their fair share."
+BUL_progressive_income_tax_desc:0 "점진적 소득세 제도는 시민들로부터 더 많은 수익을 얻고 모든 시민이 그들의 공정한 몫을 지불하도록 하는 측면에서 우리의 노력에 있어 가장 중요합니다."
 BUL_educational_development:0 "교육 개발"
-BUL_educational_development_desc:0 "Educating the Bulgarian youth is important if we are to develop a solid foundation for our citizens and contribute to and ensure the advancement and educational development of our state."
+BUL_educational_development_desc:0 "불가리아의 젊은이들을 교육시키는 것은 우리 시민의 견고한 토대를 마련하고 우리 국가의 발전과 교육 발전에 기여하는 데 중요합니다."
 BUL_transition_to_constitutional_monarchy:0 "입헌 군주국"
-BUL_transition_to_constitutional_monarchy_desc:0 "The powers of the Tsar and the wider royal family must be curbed in order to bring about a constituional monarchy. The Tsar shall no longer possess sweeping powers and intervene within political matters, but shall instead be a symbol of unity for the Bulgarian people."
+BUL_transition_to_constitutional_monarchy_desc:0 "차르와 더 넓은 왕가의 권력은 지역 군주제를 도입하기 위해 억제되어야 합니다. 차르 정부는 더 이상 막강한 권한을 가지지 않고 정치적 문제에 개입하지 않으며 대신 불가리아인들을 위한 단일성의 상징이 될 것입니다."
 BUL_easing_the_tension:0 "편안한 긴장 상태"
-BUL_easing_the_tension_desc:0 "It is clear that we have managed to alienate ourselves from our neighbouring nations within the Balkans. In order to rectify this situation, we must turn towards reconciliation with our neighbours. This will, however, not be an easy undertaking."
+BUL_easing_the_tension_desc:0 "우리가 발칸 반도에 있는 이웃국가들로부터 가까스로 멀어지게 된 것은 분명합니다. 이 상황을 바로잡기 위해서, 우리는 이웃들과의 화해를 향해 나아가야 합니다. 그러나 이것은 쉬운 일이 아닐 것입니다."
 BUL_rebuilding_the_nation:0 "국가 재건"
-BUL_rebuilding_the_nation_desc:0 "Our nation has sustained great losses both in terms of infrastructural damages and lives lost. We must take to repairing our various institutions and healing the nation."
+BUL_rebuilding_the_nation_desc:0 "우리나라는 구조적 피해와 인명 손실 면에서 모두 큰 손실을 입었습니다. 우리는 우리의 다양한 기관들을 수리하며 국가를 치유해야만 합니다."
 BUL_approaching_serbia:0 "세르비아에게 접근"
-BUL_approaching_serbia_desc:0 "We must turn our gaze towards reconciliation with Serbia in order to ensure peace and stability within the Balkans."
+BUL_approaching_serbia_desc:0 "우리는 발칸반도의 평화와 안정을 보장하기 위해 세르비아와의 화해를 향해 눈을 돌려야 합니다."
 BUL_ties_with_romania:0 "루마니아와의 유대 관계"
-BUL_ties_with_romania_desc:0 "We must turn our gaze towards reconciliation with Romania in order to ensure peace and stability within the Balkans."
+BUL_ties_with_romania_desc:0 "우리는 발칸 반도의 평화와 안정을 보장하기 위해 루마니아와의 화해를 향해 눈을 돌려야 합니다."
 BUL_relations_with_the_turks:0 "터키와의 관계"
-BUL_relations_with_the_turks_desc:0 "We must turn our gaze towards reconciliation with the Turks in order to ensure peace and stability within the Balkans."
+BUL_relations_with_the_turks_desc:0 "우리는 발칸 반도의 평화와 안정을 보장하기 위해 터키와의 화해를 향해 눈을 돌려야 합니다."
 BUL_meeting_with_greece:0 "그리스와의 만남"
-BUL_meeting_with_greece_desc:0 "We must turn our gaze towards reconciliation with Greece in order to ensure peace and stability within the Balkans."
+BUL_meeting_with_greece_desc:0 "우리는 발칸 반도의 평화와 안정을 보장하기 위해 그리스와의 화해를 향해 눈을 돌려야 합니다."
 BUL_repairing_the_peoples_pride:0 "국민의 자존심 회복"
-BUL_repairing_the_peoples_pride_desc:0 "Following the loss of many of our territories and the failure of Stamboliyski's government, the psyche of the Bulgarian people has been thoroughly ruined. We must take to reminding the Bulgarian people why they, and our nation, is so great. We must restore the confidence of the people, lest we fall even further."
+BUL_repairing_the_peoples_pride_desc:0 "많은 영토의 상실과 스탐볼리스키 정부의 실패로 인해 불가리아 사람들의 정신은 완전히 파괴되었습니다. 우리는 불가리아인들과 우리나라가 왜 그렇게 위대한지 상기시켜야 합니다. 더 이상 추락하지 않도록 국민의 신뢰를 회복해야만 합니다."
 BUL_a_liberal_bulgaria:0 "자유주의 불가리아"
-BUL_a_liberal_bulgaria_desc:0 "We have managed to bring about all of the reforms that we had sought out to push through. Bulgaria is now a more liberal and fairer nation, with the Tsar serving as the unifier for the Bulgarian people. The future seems optimistic. Long live the Bulgarian people!"
+BUL_a_liberal_bulgaria_desc:0 "우리는 우리가 추진하고자 했던 모든 개혁을 가까스로 이끌어냈습니다. 불가리아는 이제 좀 더 자유롭고 공정한 국가로, 차르가 불가리아인들을 위한 통일체 역할을 하고 있습니다. 미래는 낙관적인 것 같습니다. 불가리아인 만세!"
 
 BUL_the_bulgarian_navy:0 "불가리아 해군"
 BUL_the_bulgarian_navy_desc:0 "특히 해전을 위한 빠른 변화와 적절한 해군의 소유에 대한 중요성을 고려할 때, 우리는 우리 해군의 확장과 유지를 향해 시선을 돌리는 것이 중요합니다."
