--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -1,16 +1,16 @@
 l_english: 
-annexation_AFG_CONQ:0 "The Annexation of Afghanistan"
-annexation_AFG_CONQ_desc:0 "After a long fight with the Afghans, we have launched a full offensive and forced the Afghan Army to surrender. Kabul is now in our hands!"
-annexation_ALB_CONQ:0 "The Fate of Albania"
-annexation_ALB_CONQ_desc:0 "After a short campaign across the Albanian countryside, Tirana finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
-annexation_ALG_CONQ:0 "The Fate of Algeria"
-annexation_ALG_CONQ_desc:0 "We finally freed Algeria from the French tyrants in Algiers. Should we give the Algerians freedom?"
-annexation_ANG_CONQ:0 "The Fate of Angola"
-annexation_ANG_CONQ_desc:0 "Our annexation of the former Portuguese colony of Angola left us to manage those millions of Africans far by the seas. Surely installing a local government will be easier for us to manage it, but should we trust the locals with that?"
-annexation_ARG_CONQ:0 "The Fate of Argentina"
-annexation_ARG_CONQ_desc:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. Now we will need to decide on the fate of the region."
-annexation_ARM_CONQ:0 "The Annexation of Armenia"
-annexation_ARM_CONQ_desc:0 "After fierce fighting in the Caucasus, we have conquered and annexed Armenia. The Armenian army has surrendered, and the territory is under our control, but the people are still resistant but soon they will submit."
+annexation_AFG_CONQ:0 "아프가니스탄 합병"
+annexation_AFG_CONQ_desc:0 "아프가니스탄 사람들과 오랜 시간 싸운 후, 우리는 아프간 군을 항복하게끔 완전히 공격하기 시작했습니다. 카불은 지금 우리 손에 있습니다!"
+annexation_ALB_CONQ:0 "알바니아의 운명"
+annexation_ALB_CONQ_desc:0 "알바니아 시골을 가로지르는 짧은 선거운동 후에 마침내 티라나는 항복했고 우리에게 그들의 나라를 지배하게 했습니다. 우리는 이제 그것을 어떻게 할지 결정해야 합니다."
+annexation_ALG_CONQ:0 "알제리의 운명"
+annexation_ALG_CONQ_desc:0 "우리는 마침내 알제리를 알제리의 프랑스 독재자들로부터 해방시켰습니다. 알제리 사람들에게 자유를 주어야 할까요?"
+annexation_ANG_CONQ:0 "앙골라의 운명"
+annexation_ANG_CONQ_desc:0 "과거 앙골라 식민지를 합병한 결과 우리는 멀리 있는 수백만 명의 아프리카인들을 관리하게 되었습니다. 물론 지방정부를 설치하는 것이 우리가 그것을 관리하는 것이 더 쉬울 것입니다. 하지만 우리는 그것을 가지고 지역민을 믿어야 할까요?"
+annexation_ARG_CONQ:0 "아르헨티나의 운명"
+annexation_ARG_CONQ_desc:0 "라 플라타라는 거대한 나라를 정복한 후에 우리는 그 지역을 통제하기 위해 유능한 정부들을 조직해야 합니다. 이제 우리는 그 지역의 운명을 결정할 필요가 있습니다."
+annexation_ARM_CONQ:0 "아르메니아 합병"
+annexation_ARM_CONQ_desc:0 "코카서스 산맥에서 치열한 전투 끝에 우리는 아르메니아를 정복하고 합병했습니다. 아르메니아 군대가 항복했고, 그 영토는 우리의 통제하에 있지만, 사람들은 여전히 저항하고 있습니다. 그러나 곧 항복할 것입니다."
 annexation_AST_CONQ:0 "The Fate of Australasia"
 annexation_AST_CONQ_desc:0 "After a hard campaign throughout the isolated islands of the Australasian confederation our armies finally reached Canberra and with the capitulation of Australasia we must decide how we want to manage it."
 annexation_AST_restoring_australasia:0 "The Restoration of Australasia"
